// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component test should render without crash with props 1`] = `
<div
  className="checkbox "
>
  <input
    checked={false}
    className="checkboxCLass"
    id="bulma-io-checkbox"
    name="checkboxName"
    onChange={null}
    type="checkbox"
  />
  <label
    htmlFor="bulma-io-checkbox"
    onChange={null}
  >
     
  </label>
</div>
`;

exports[`Checkbox component test should render without crash without props 1`] = `
<div
  className="checkbox "
>
  <input
    checked={false}
    className=""
    id="bulma-io-checkbox"
    name=""
    onChange={null}
    type="checkbox"
  />
  <label
    htmlFor="bulma-io-checkbox"
    onChange={null}
  >
     
  </label>
</div>
`;
